# tarius-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
src/: main.cpp
src/ai_secretary/: ai_secretary.cpp  ai_secretary.h  calendar.cpp  calendar.h  task_list.cpp  task_list.h
src/ai_twin/: ai_twin.cpp  ai_twin.h
src/app/: app_controller.cpp  app_controller.h  cli_interface.cpp  cli_interface.h
src/models/: llama_model.cpp  llama_model.h  memory_manager.cpp  memory_manager.h
src/utils/: config.cpp  config.h  json_handler.cpp  json_handler.h  logger.cpp  logger.h
